# 101

./: .gitignore  README.md
Assignment0/: main.cpp
Assignment0/.cache/clangd/index/: main.cpp.C1F9E3789A6D3239.idx
Assignment1/code/: CMakeLists.txt  main.cpp
Assignment2/code/: main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Code/: Texture.hpp  main.cpp  rasterizer.cpp
Assignment4/code/: main.cpp
Assignment5/Code/: Renderer.cpp  Triangle.hpp
Assignment6/Assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
Assignment7/Assignment7/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
assignment8/src/: rope.cpp
